--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <p>
-        hola estudiantes este es mi sitio web
+        hola estudiantes este es el nuevo avance
         sigueme en este proyecto
     </p>
 </body>
